--- a/AUTHORS
+++ b/AUTHORS
@@ -4,3 +4,5 @@
 Jennifer Huang <133@holbertonschool.com>
 Alexa Orrico <210@holbertonschool.com>
 Joann Vuong <130@holbertonschool.com> 
+Dan Bethel <5625@holbertonschool.com>
+Sonia Nguyen <5655@holbertonschool.com> 
